<resources>
    <string name="app_name">Architecture</string>
    <string name="signin">SignIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="err_blank_email">Email can not be left blank.</string>
    <string name="err_invalid_email">Please enter valid email address.</string>
    <string name="err_blank_pwd">Password can not be left blank.</string>
    <string name="err_no_internet">No internet connection!</string>
    <string name="logout">Logout</string>
    <string name="welcome_home">Welcome Home!</string>
</resources>
