<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SigninActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/txt_signup"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edit_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        app:layout_constraintTop_toBottomOf="@+id/edit_pwd"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/txt_already_have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txt_singin"
        android:layout_marginTop="30dp"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/txt_singin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        app:layout_constraintStart_toEndOf="@id/txt_already_have_acc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_already_have_acc"
        app:layout_constraintBottom_toBottomOf="@id/txt_already_have_acc"
        android:padding="10dp"
        android:textColor="@android:color/holo_blue_light"/>
</androidx.constraintlayout.widget.ConstraintLayout>